usetup was set to create an entry in r62697. Since (presumably) then we get this on 2nd stage boot:
(base/system/smss/pagefile.c:114) SMSS:PFILE: SmpParseCommandLine( ) failed - Status == c0000001
|
(ntoskrnl/mm/ARM3/sysldr.c:174) Loading: \SystemRoot\system32\drivers\cdfs.sys at F8727000 with c pages
|
(base/system/smss/pagefile.c:909) SMSS:PFILE: Volume `\??\D:\' (3) cannot store a paging file
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 2FF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:601) SMSS:PFILE: Failing for min 2EF61000, max 5FEC2000, real min 2FF61000
|
(base/system/smss/pagefile.c:1044) SMSS:PFILE: Trying lower sizes for (`\??\C:\ReactOS\:\pagefile.sys')
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 2FF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 2EF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 2DF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 2CF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 2BF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 2AF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 29F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 28F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 27F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 26F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 25F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 24F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 23F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 22F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 21F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 20F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 1FF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 1EF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 1DF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 1CF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 1BF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 1AF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 19F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 18F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 17F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 16F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 15F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 14F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 13F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 12F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 11F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 10F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, FF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, EF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, DF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, CF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, BF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, AF61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 9F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 8F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 7F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 6F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 5F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 4F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 3F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 2F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:470) SMSS:PFILE: NtCreatePagingFile (\??\C:\ReactOS\:\pagefile.sys, 1F61000, 5FEC2000) failed with C0000033
|
(base/system/smss/pagefile.c:601) SMSS:PFILE: Failing for min F61000, max 5FEC2000, real min 1000000
|
(base/system/smss/pagefile.c:1093) SMSS:PFILE: Creating emergency paging file.
|