[USETUP] - add a default page file entry to the registry also during unattended setup CORE-8074

svn path=/trunk/; revision=62769